--- a/routemap.Rmd
+++ b/routemap.Rmd
@@ -82,6 +82,8 @@ my_tible <- my_tible %>%
   st_set_crs("+init=epsg:2154") %>% 
   st_transform(crs="+proj=longlat +datum=WGS84")
 
+
+#HERE!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 newmap <- map %>% 
   st_set_crs("+proj=utm +zone=15 +datum=NAD83  +units=m") %>% 
   st_transform(crs="+proj=longlat +datum=NAD83") %>% 
