diferentiate route class by color

--- a/leaflet demo for bus routes.Rmd
+++ b/leaflet demo for bus routes.Rmd
@@ -69,4 +69,11 @@ testGroup<-map %>%
 
 class(map$route)
 ```
+```{r}
+factpal <- colorFactor(palette="Set2", testGroup$RouteClass)
+
+leaflet(testGroup) %>%
+  addPolylines(color = ~factpal(RouteClass))
+```
+
 
