--- a/model_1.Rmd
+++ b/model_1.Rmd
@@ -1,15 +1,15 @@
 ---
 title: "Regression models trail for Ridership and Gas Price"
-author: "Rita Li"
+author: "Rita Li, Jenny Li"
 date: '2022-10-31'
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
 ```
 
-## Load Library and read in datasets
+# Load Library and Read in Datasets
 ```{r,message=FALSE,echo=FALSE,warning=FALSE}
 library(dbplyr)
 library(tidyverse)
@@ -34,7 +34,9 @@ gas <- read_csv("ridershipdata/Weekly_Minnesota_Regular_Conventional_Retail_Gaso
 nbhd <- read_csv("ridershipdata/stops_and_neighborhood.xls - TransitStops_Int_ExportTable.csv")
 ```
 
-# prepare gas dataset
+## Dataset Description
+
+## Prepare Gas Dataset
 ```{r, warning=FALSE}
 gas_fixed <- gas %>% 
   mutate(date = as.Date(`Week of`, "%m/%d/%Y")) %>% 
@@ -48,14 +50,14 @@ gas_fixed <- gas %>%
   mutate(date = year + (month-1)/12)
 ```
 
-# prepare Route Class dataset
+## Pepare Route Class Dataset
 
 ```{r}
 routeclass <- nbhd %>% 
   distinct(route, RouteClass)
 ```
 
-# Join Datasets
+## Join Datasets
 ```{r, fig.width=7,fig.height=3,message=FALSE}
 rider_gas_complete <- ridership %>% 
   mutate(date = as.Date(dtDate)) %>%
@@ -76,8 +78,9 @@ coreloc <- rider_gas_complete %>%
   mutate(date = year + (month-1)/12)
 ```
 
+# Models
 
-#CoreLoc
+## CoreLoc
 
 ### Visualization of CoreLoc Ridership
 
@@ -135,7 +138,7 @@ CoreLoc %>%
        y = "Total Riders")
 ```
 
-## timeseries for CoreLoc ridership
+### Timeseries for CoreLoc Ridership
 
 ```{r}
 # look at residuals
@@ -157,7 +160,7 @@ AR2 <- sarima(CoreLoc$remove_season, p = 3, d = 0, q = 0)
 We think our model does a decent job at estimating our data as the ACF of residuals are fairly small, and the p-values for Ljung-Box test are fairly large, which implies our residuals are independent. 
 
 
-# CommExpress
+## CommExpress
 
 ### Visualization
 ```{r, fig.width=7,fig.height=3,message=FALSE}
@@ -210,7 +213,7 @@ lm.ride.season %>% summary()
 
 ## Other Models
 
-### single vairable regression of each bus routes, riders and gas price, visualization of p-values
+### Single Vairable Regression of Each Bus Routes, Riders and Gas Price, Visualization of P-values
 ```{r}
 routes <- r$Route %>% unique()
 gasp <- gas$gas_price
@@ -255,7 +258,7 @@ mod.results %>%
   geom_point(aes(color = positive))
 ```
 
-### zscore of ridership and gas price linear regression and prediction visualization
+### Z-score of Ridership and Gas Price Linear Regression and Prediction Visualization
 ```{r}
 justed_data <- rider_gas_complete %>% 
   group_by(Route) %>% 
@@ -279,7 +282,7 @@ justed_data %>%
   geom_line(aes(y = predict_riders), color = "blue")
 ```
 
-### zscore and gas price regression for each bus routes and visualization of p-values.
+### Z-score and Gas Price Regression for Each Bus Routes and Visualization of P-values.
 ```{r}
 routes <- justed_data$Route %>% unique()
 gasp <- gas$gas_price
@@ -327,7 +330,7 @@ mod.results %>%
 
 ```
 
-# failed models
+## Failed Models
 ```{r, eval=FALSE}
 ride63 <- rider_gas_complete %>%
   drop_na(riders, date) %>% 
@@ -359,4 +362,128 @@ r <- ride63 %>%
   mutate(schedules = n()) %>%
   ungroup() %>% 
   filter(schedules == max(schedules))
+```
+
+# Visualization
+
+## Shiny App
+
+[shiny app](https://jennylipro.shinyapps.io/routesMap/)
+
+```{r,eval=FALSE}
+#library
+library(shiny)
+library(shinyWidgets)
+library(rgdal)
+library(leaflet)
+library (raster)
+library(dplyr)
+library(sf)
+library(tidyverse)
+#load data
+map <- readOGR("newmap.shp") %>%
+  st_as_sf()
+
+#Class name for checkbox
+className <- map %>%
+  distinct(RouteClass) %>%
+  mutate(dum = "1") %>%
+  pivot_wider(names_from = RouteClass, values_from = dum)
+
+mychoice = names(className)
+
+
+ui <- fluidPage(# Application title
+  titlePanel("Twin Cities Metro Route Map"),
+  
+  sidebarLayout(
+    sidebarPanel(
+      h4("Please choose route classes to include :"),
+      #Select ALL
+      checkboxInput("all", "Select All/None"),
+      #add checkbox group
+      checkboxGroupInput("classSelect", "Route Classes", mychoice)
+      
+      # #checkbox list of route class
+      # uiOutput("classes_select "),
+    ),
+    # Show a plot of the generated distribution
+    mainPanel(#Dropdown list of routes
+      uiOutput("routes_select"),
+      
+      
+      #Map
+      leafletOutput("routesLeaflet"),)
+  ))
+
+# Define server logic required to draw a histogram
+server <- function(input, output, session) {
+  #update checkbox input
+  observe({
+    updateCheckboxGroupInput(session,
+                             "classSelect",
+                             choices = mychoice,
+                             #if select all is true, then show all the choices, vice versa
+                             selected = if (input$all)
+                               mychoice)
+  })
+  
+  #creat routes dropdown list
+  output$routes_select <- renderUI({
+    #we want the routes name only appears once
+    selectInput("pick_routes", "choose a route:", choices = c(unique(map$route)))
+  })
+  
+  
+  #create map
+  output$routesLeaflet <- renderLeaflet({
+    #make it only showed the route selected
+    filtered = filter(map, map$route == input$pick_routes)
+    #class filter
+    filteredClass = filter(map, map$RouteClass %in%  c(input$classSelect))
+    #set up color
+    factpal <- colorFactor(palette = "Set1", filteredClass$RouteClass)
+    #setup map
+    routesLeaflet <-
+      #map%>%
+      leaflet() %>%
+      addProviderTiles("CartoDB.Positron",
+                       options = providerTileOptions(opacity = 0.8)) %>%
+      addPolylines(
+        data = filtered,
+        color = "navy",
+        weight = 3,
+        smoothFactor = 0.5,
+        opacity = 1.0,
+        highlightOptions = highlightOptions(
+          color = "cyan",
+          weight = 2,
+          bringToFront = TRUE
+        ),
+        popup =  paste("Route: ", map$route, "<br>")
+      ) %>%
+      addPolylines(
+        data = filteredClass,
+        color = ~ factpal(RouteClass),
+        weight = 1,
+        smoothFactor = 0.5,
+        opacity = 0.5,
+        highlightOptions = highlightOptions(
+          color = "yellow",
+          weight = 2,
+          bringToFront = TRUE
+        ),
+        popup =  paste("Route: ", map$route, "<br>")
+      )
+    
+    
+    #call map
+    routesLeaflet
+  })
+  
+}
+
+# Run the application
+shinyApp(ui = ui, server = server)
+
 ```
